src/examples/errors/01_type_mismatch.veri
// Error: Type mismatch - assigning bool to int
// Expected error: E001 - Type mismatch

fn main() {
    let x: int = true;
}
